
		CHANGES in `multcomp' VERSION 1.0-5

    o    update vignette

		CHANGES in `multcomp' VERSION 1.0-4

    o    fix Rd problems

		CHANGES in `multcomp' VERSION 1.0-3

    o    use isSymmetric(vcov, tol = sqrt(.Machine$double.eps)
         to check for symmetry of covariance matrices in `parm'
         (suggested by Fritz)

    o    better error messages suggested by Rich


		CHANGES in `multcomp' VERSION 1.0-2

    o    use new model.matrix / model.frame methods for class mer in
         lme4 (>= 0.999375-16)


		CHANGES in `multcomp' VERSION 1.0-1

    o    make sure more than 2 groups are present in contrMat()

    o    check if `model' is an S4 object before trying to extract its
         `call' slot

    o    better warning when df.residual fails


		CHANGES in `multcomp' VERSION 1.0-0

    o    unify both vignettes

    o    mcp() doesn't try to take care of interaction terms anymore


		CHANGES in `multcomp' VERSION 0.993-3

    o    new `parm' function for specifying model parameters estimated
         elsewhere

    o    improve print method for confidence intervals

    o    new adjustment method `free' (for free combinations)


		CHANGES in `multcomp' VERSION 0.993-2

    o    make sure names are printed correctly when nrow(K) = 1

    o    interaction terms are now correctly handled when a symbolic
         descripton of the hypotheses is supplied, thanks to 
         Antonio Fabio Di Narzo for spotting.


		CHANGES in `multcomp' VERSION 0.993-1

    o    new vignette `Simultaneous Inference in General Parametric Models'

    o    warn if ... arguments are ignored

    o    levels in trees513 data slightly changed.


		CHANGES in `multcomp' VERSION 0.992-9

    o    remove deprecated functions simint and simtest (the files
         are still available from multcomp/inst/deprecated)

    o    better error message when factors specified in mcp() aren't
         found in model


		CHANGES in `multcomp' VERSION 0.992-8
