@@ -1,5 +1,5 @@
 
-R version 2.6.2 (2008-02-08)
+R version 2.8.0 (2008-10-20)
 Copyright (C) 2008 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -65,10 +65,10 @@ Multiple Comparisons of Means: Tukey Contrasts
 Fit: aov(formula = breaks ~ wool + tension, data = warpbreaks)
 
 Linear Hypotheses:
-           Estimate Std. Error t value p value   
-M - L == 0  -10.000      3.872  -2.582 0.03367 * 
-H - L == 0  -14.722      3.872  -3.802 0.00115 **
-H - M == 0   -4.722      3.872  -1.219 0.44739   
+           Estimate Std. Error t value Pr(>|t|)   
+M - L == 0  -10.000      3.872  -2.582  0.03367 * 
+H - L == 0  -14.722      3.872  -3.802  0.00115 **
+H - M == 0   -4.722      3.872  -1.219  0.44739   
 ---
 Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
 (Adjusted p values reported -- single-step method)
@@ -111,8 +111,8 @@ Multiple Comparisons of Means: Tukey Contrasts
 Fit: aov(formula = breaks ~ wool + tension, data = warpbreaks)
 
 Linear Hypotheses:
-           Estimate Std. Error t value p value  
-B - A == 0   -5.778      3.162  -1.827  0.0736 .
+           Estimate Std. Error t value Pr(>|t|)  
+B - A == 0   -5.778      3.162  -1.827   0.0736 .
 ---
 Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1 
 (Adjusted p values reported -- single-step method)
