@@ -1,11 +1,19 @@
 
+
+		CHANGES in `multcomp' VERSION 1.0-6
+
+    o    better names for p-values (feature request by Achim Zeileis)
+
+
 		CHANGES in `multcomp' VERSION 1.0-5
 
     o    update vignette
 
+
 		CHANGES in `multcomp' VERSION 1.0-4
 
     o    fix Rd problems
+
 
 		CHANGES in `multcomp' VERSION 1.0-3
 
